--- a/pages/pt/inicio.html
+++ b/pages/pt/inicio.html
@@ -44,7 +44,7 @@
     <div class="jt-header main">
         <div class="main-inner clearfix">
 			                <h1 class="logo">
-                    <a href="../../index.html" title="PortLex - Recursos Léxicos para o processamento do português do Brasil">
+                    <a href="inicio.html" title="PortLex - Recursos Léxicos para o processamento do português do Brasil">
                     <img src="../../images/logo_png5.png" title="PortLex - Recursos Léxicos para o processamento do português do Brasil" />
                     <span>PortLex - Recursos Léxicos para o processamento do português do Brasil</span></a>
                 </h1>
@@ -59,7 +59,7 @@
 					<img src="../../media/mod_languages/images/en.gif" alt="English (UK)" title="English (UK)" />						</a>
 			</li>
 				<li class="lang-active">
-		<a href="../../index.html">
+		<a href="inicio.html">
 					<img src="../../media/mod_languages/images/pt_br.gif" alt="Português (Brasil)" title="Português (Brasil)" />						</a>
 			</li>
 		</ul>
@@ -70,7 +70,7 @@
                 	
                         <div class="popupbox" id="popuprel">
                             <div id="intabdiv">
-                                                        <form action="../../index.html" method="post" id="login-form" >
+                                                        <form action="inicio.html" method="post" id="login-form" >
 		<fieldset class="userdata">
 	<p id="form-login-username">
 		<label for="modlgn-username">Nome de Usuário</label>
