--- a/pages/en/index.html
+++ b/pages/en/index.html
@@ -51,7 +51,7 @@
     <div class="jt-header main">
         <div class="main-inner clearfix">
 			                <h1 class="logo">
-                    <a href="../../index.html" title="PortLex - Recursos Léxicos para o processamento do português do Brasil">
+                    <a href="index.html" title="PortLex - Recursos Léxicos para o processamento do português do Brasil">
                     <img src="../../images/logo_png5.png" title="PortLex - Recursos Léxicos para o processamento do português do Brasil" />
                     <span>PortLex - Recursos Léxicos para o processamento do português do Brasil</span></a>
                 </h1>
@@ -66,7 +66,7 @@
 					<img src="../../media/mod_languages/images/en.gif" alt="English (UK)" title="English (UK)" />						</a>
 			</li>
 				<li class="">
-		<a href="../../index.html">
+		<a href="index.html">
 					<img src="../../media/mod_languages/images/pt_br.gif" alt="Português (Brasil)" title="Português (Brasil)" />						</a>
 			</li>
 		</ul>
