--- a/pages/en/contact.html
+++ b/pages/en/contact.html
@@ -157,9 +157,9 @@
 	
 </div>
 	<ul>
-<li><strong>Carolina Evaristo Scarton</strong> - carol <em>at</em> icmc.usp.br</li>
+<li><strong>Carolina Evaristo Scarton</strong> - c.scarton <em>at</em> sheffield.ac.uk</li>
 </ul>
-<p style="padding-left: 60px;">MSc student - NILC - ICMC - USP</p>	
+<p style="padding-left: 60px;">Senior Lecturer at the Department of Computer Science, The University of Sheffield, UK</p>	
 	</div>
                                         
                                         
