Fix outdated URLs

--- a/pages/en/index.html
+++ b/pages/en/index.html
@@ -164,7 +164,9 @@
 <h1 style="text-align: center;"><strong><a href="../projects/propbankbringl.html" target="_self">PropBank.Br</a></strong></h1>
 <p><strong><br /></strong></p>
 <h1 style="text-align: center;"><strong><a href="projects/liwc.html" target="_self">LIWC</a></strong></h1>
-<p> </p>
+<p style="text-align: center;"> </p>
+<h1 style="text-align: center;"><strong><a href=" https://nilc-nlp.github.io/verbobrasil/">Verbo-Brasil</a></strong></h1>
+<p><strong><br /></strong></p>
 <h1 style="text-align: center;"><strong><a href="other-resources2/psycholinguistic.html">Psycholinguistic Properties of Brazilian Portuguese</a></strong></h1>
 <p>Other resources:</p>
 <h1 style="text-align: center;"><a href="other-resources2/pron-verbs.html">Pronominal Verbs</a></h1>
