--- a/pages/pt/inicio.html
+++ b/pages/pt/inicio.html
@@ -157,7 +157,7 @@
 <p> </p>
 <h1 style="text-align: center;"><strong><a href="projetos/liwc.html" target="_self">LIWC</a></strong></h1>
 <p style="text-align: center;"> </p>
-<h1 style="text-align: center;"><a href="http://143.107.183.175:21380/verbobrasil/"></a><strong><a href="http://143.107.183.175:21380/verbobrasil/">Verbo-Brasil</a></strong></h1>
+<h1 style="text-align: center;"><strong><a href=" https://nilc-nlp.github.io/verbobrasil/">Verbo-Brasil</a></strong></h1>
 <p><strong><br /></strong></p>
 <h1 style="text-align: center;"><strong><a href="../en/other-resources2/psycholinguistic.html">Psycholinguistic Properties of Brazilian Portuguese</a></strong></h1>
 <p>Outros recursos:</p>
