Fix outdated URLs

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortLex</title>
-    <meta http-equiv="refresh" content="0; URL='pages/pt/inicio.html'" />
+    <meta http-equiv="refresh" content="0; URL='pages/pt/index.html'" />
 </head>
 
 <body>
-    <p>Se você não for redirecionado automaticamente, <a href="pages/pt/home.html">clique aqui</a>.</p>
+    <p>Se você não for redirecionado automaticamente, <a href="pages/pt/index.html">clique aqui</a>.</p>
 </body>
 
 </html>
