--- a/pages/en/downloadsingl.html
+++ b/pages/en/downloadsingl.html
@@ -66,7 +66,7 @@
 					<img src="../../media/mod_languages/images/en.gif" alt="English (UK)" title="English (UK)" />						</a>
 			</li>
 				<li class="">
-		<a href="index.html">
+		<a href="../pt/index.html">
 					<img src="../../media/mod_languages/images/pt_br.gif" alt="Português (Brasil)" title="Português (Brasil)" />						</a>
 			</li>
 		</ul>
