Fix outdated URLs

--- a/pages/en/other-resources2/psycholinguistic.html
+++ b/pages/en/other-resources2/psycholinguistic.html
@@ -173,7 +173,7 @@
  </span>.</p>
 <p style="background-image: none; background-attachment: scroll; border: 0px none; margin: 8px 0px; outline: none 0px; padding: 0px; line-height: 1.7em; font-family: Arial, Helvetica, sans-serif; background-position: 0px 0px; background-repeat: repeat repeat;"> </p>
 <p style="background-image: none; background-attachment: scroll; border: 0px none; margin: 8px 0px; outline: none 0px; padding: 0px; line-height: 1.7em; font-family: Arial, Helvetica, sans-serif; background-position: 0px 0px; background-repeat: repeat repeat;"><strong>Download</strong></p>
-<p style="background-image: none; background-attachment: scroll; border: 0px none; margin: 8px 0px; outline: none 0px; padding: 0px; line-height: 1.7em; font-family: Arial, Helvetica, sans-serif; background-position: 0px 0px; background-repeat: repeat repeat;"><a href="../../arquivos/psycholinguistic/psycholinguistic_properties.zip">Lexical database</a></p>
+<p style="background-image: none; background-attachment: scroll; border: 0px none; margin: 8px 0px; outline: none 0px; padding: 0px; line-height: 1.7em; font-family: Arial, Helvetica, sans-serif; background-position: 0px 0px; background-repeat: repeat repeat;"><a href="../../../arquivos/psycholinguistic/psycholinguistic_properties.zip">Lexical database</a></p>
 <p style="background-image: none; background-attachment: scroll; border: 0px none; margin: 8px 0px; outline: none 0px; padding: 0px; line-height: 1.7em; font-family: Arial, Helvetica, sans-serif; background-position: 0px 0px; background-repeat: repeat repeat;"><a href="https://github.com/lbsantos/psycholinguistic-regression" style="font-size: 12.16px;">Source code</a></p>	
 	</div>
                                         
